Removed year in Today.js, fixed switch button z-index

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -76,7 +76,7 @@
     position: absolute;
     top: 2.9rem;
     right: 2rem;
-    z-index: 99;
+    z-index: 50;
   }
 
   .switch-button-light {
